# news-analyzer

./: .dockerignore  .env.example  .gitignore  AGENTS.md  ASSESSMENT_REPORT.md  BUILD_AND_DEPLOY.sh  DEPLOYMENT_UPDATE.md  Dockerfile  FRONTEND_ARCHITECTURE.md  FRONTEND_DELIVERY_SUMMARY.md  FRONTEND_README.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_SUMMARY.md  KUBERNETES_DEPLOYMENT_SUMMARY.md  KUBERNETES_MCP_SETUP_COMPLETE.md  LICENSE  Makefile  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  dependency-update.yml  manual-deploy.yml  pr-checks.yml  release.yml  scheduled-tasks.yml
docs/: API_INTEGRATION_GUIDE.md  BACKFILL_AND_REPROCESSING.md  COMPONENT_EXAMPLES.md  METADATA_MAPPING.md  QUICK_START.md  UNIFIED_UI_OVERVIEW.md  architecture.md  facebook_auth.md
extractor/: Dockerfile  __init__.py  backfill.py  config.py  database.py  event_parser.py  html_extractor.py  normalize.py  pdf_extractor.py  processor.py  pyproject.toml
frontend/: .env.example  README.md  package-lock.json  package.json  svelte.config.js  tailwind.config.ts  vite.config.ts
frontend/src/: app.css
frontend/src/lib/api/: client.ts  endpoints.ts  query-client.ts
frontend/src/lib/components/charts/: BarChart.svelte  HeatIndicator.svelte  NetworkGraph.svelte  Sparkline.svelte  TimelineChart.svelte  TrendCard.svelte
frontend/src/lib/components/common/: AnimatedCounter.svelte  Badge.svelte  Button.svelte  Card.svelte  Input.svelte  LoadingSpinner.svelte  Select.svelte  SkeletonCard.svelte  SkeletonChart.svelte
frontend/src/lib/components/events/: EventTimeline.svelte
frontend/src/lib/components/feed/: ArticleCard.svelte  FeedFilters.svelte
frontend/src/lib/components/layout/: Footer.svelte  Header.svelte  ThemeToggle.svelte
frontend/src/lib/components/workspace/: FilterPanel.svelte  InsightsPanel.svelte  SearchPanel.svelte  StatCard.svelte
frontend/src/lib/stores/: read-tracker.ts  theme.ts
frontend/src/lib/types/: api.ts
frontend/src/lib/utils/: articles.ts  date.ts  network.ts  timing.ts  url-state.ts
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/routes/analytics/: +page.svelte
frontend/src/routes/browse/: +page.svelte
frontend/src/routes/discover/: +page.svelte
frontend/src/routes/events/: +page.svelte
frontend/src/tests/: articles.test.ts  network.test.ts
k8s/: ARC_DEPLOYMENT_GUIDE.md  DEPLOYMENT_GUIDE.md  K3S_DEPLOYMENT_ASSESSMENT.md  K3S_SECRET_DEPLOYMENT_GUIDE.md  analysis-cronjob.yaml  arc-controller.yaml  arc-github-secret.yaml  arc-namespace.yaml  arc-runner-rbac-news-analyzer.yaml  arc-runner-scale-set.yaml  configmap.yaml  extractor-cronjob.yaml  extractor-job.yaml  github-runner-rbac.yaml  github-runner-v2.yaml  github-runner-v3.yaml  github-runner.yaml  minio-statefulset.yaml  minio-tenant-minimal.yaml  minio-tenant.yaml  namespace.yaml  notifier-cronjob.yaml  notifier-deployment.yaml  ntfy-deployment.yaml  osint-nws-cronjob.yaml  postgres-deployment.yaml  qdrant-sync-cronjob.yaml  reddit-cronjob.yaml  resource-quota-update.yaml  scraper-cronjob.yaml  scraper-discover-override.yaml  scraper-login-override.yaml  secrets-template.yaml  secrets.yaml  summarizer-deployment.yaml  summarizer-ingress.yaml  summarizer-static-override.yaml  weaviate-sync-cronjob.yaml
k8s/ops/: README.md  controller-configmap.yaml  kustomization.yaml  ops-backfill-controller.yaml  ops-backfill-topup-cronjob.yaml  ops-backfill-topup-job.yaml  ops-cleanup-cronjob.yaml  ops-configmap.yaml  ops-deployer-job.yaml  ops-health-cronjob.yaml  ops-rbac.yaml
notifier/: Dockerfile  __init__.py  __main__.py  ntfy_notifier.py  pyproject.toml  service.py
scraper/: .docker-local-overlay.Dockerfile  Dockerfile  backfill.py  browser_manager.py  config.py  discover.py  downloader.py  facebook_client.py  fb_ingest.py  login.py  minio_utils.py  normalize.py  nws_ingest.py  observability.py  pyproject.toml  reddit_ingest.py  scanner_ingest.py  test_discover.py  test_facebook_config.py
scripts/: build-and-push.sh  cf-curl.sh  controller.sh  deploy.sh  launch_extractor_backfills.py  launch_scraper_backfills.py  reprocess_pipeline.py  split_range.py
summarizer/: Dockerfile  __init__.py  analysis.py  api.py  batch.py  config.py  database.py  embeddings.py  pyproject.toml  qdrant_sync.py  reddit_oauth.py  utils.py  weaviate_sync.py
summarizer/static/: app.js  index.html  style.css
summarizer/static/ui/: index.html
