[project]
name = "news-analyzer"
version = "0.1.0"
description = "Automated local news scraper and summarizer"
authors = [
    {name = "Codex",email = "codex@openai.com"}
]
readme = "README.md"
requires-python = "^3.11"
dependencies = [
    "playwright (>=1.53.0,<2.0.0)",
    "trafilatura (>=2.0.0,<3.0.0)",
    "pdfminer-six (>=20250506,<20250507)",
    "openai (>=1.93.0,<2.0.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)"
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
