[tool.poetry]
name = "news-analyzer"
version = "0.1.0"
description = "Automated local news scraper and summarizer"
authors = ["Codex <codex@openai.com>"]

[tool.poetry.dependencies]
python = "^3.11"
playwright = "^1.53.0"
trafilatura = "^2.0.0"
pdfminer-six = "20250506"
openai = "^1.93.0"
pydantic = "^2.11.7"
pydantic-settings = "^2.0.0"
python-dotenv = "^1.1.1"
requests = "^2.31.0"
minio = "^7.2.0"
sqlalchemy = "^2.0.0"
psycopg2-binary = "^2.9.0"
asyncpg = "^0.29.0"
fastapi = "^0.117.1"
uvicorn = "^0.24.0"
jinja2 = "^3.1.0"
sendgrid = "^6.10.0"
beautifulsoup4 = "^4.12.0"
aiohttp = "^3.9.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
