[tool.poetry]
name = "extractor"
version = "0.1.0"
description = "Text extraction from PDFs and HTML"
authors = ["Codex <codex@openai.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
pdfminer-six = "20250506"
trafilatura = "^2.0.0"
beautifulsoup4 = "^4.12.0"
pydantic = "^2.11.7"
pydantic-settings = "^2.11.0"
python-dotenv = "^1.1.1"
sqlalchemy = "^2.0.0"
psycopg2-binary = "^2.9.0"
asyncpg = "^0.30.0"
minio = "^7.2.0"
requests = "^2.31.0"
playwright = "^1.53.0"
dateparser = "^1.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
