[project]
name = "news-analyzer"
version = "0.1.0"
description = "Automated local news scraper and summarizer"
authors = [
    {name = "Codex",email = "codex@openai.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "playwright>=1.53.0,<2.0.0",
    "trafilatura>=2.0.0,<3.0.0",
    "pdfminer-six>=20250506,<20250507",
    "openai>=1.93.0,<2.0.0",
    "pydantic>=2.11.7,<3.0.0",
    "pydantic-settings>=2.0.0,<3.0.0",
    "python-dotenv>=1.1.1,<2.0.0",
    "requests>=2.31.0,<3.0.0",
    "minio>=7.2.0,<8.0.0",
    "sqlalchemy>=2.0.0,<3.0.0",
    "psycopg2-binary>=2.9.0,<3.0.0",
    "asyncpg>=0.29.0,<1.0.0",
    "fastapi>=0.104.0,<1.0.0",
    "uvicorn>=0.24.0,<1.0.0",
    "jinja2>=3.1.0,<4.0.0",
    "sendgrid>=6.10.0,<7.0.0",
    "beautifulsoup4>=4.12.0,<5.0.0",
    "aiohttp>=3.9.0,<4.0.0"
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
