[tool.poetry]
name = "scraper"
version = "0.1.0"
description = "Web scraper for news e-editions"
authors = ["Codex <codex@openai.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
playwright = "^1.53.0"
pydantic = "^2.11.7"
pydantic-settings = "^2.11.0"
python-dotenv = "^1.1.1"
requests = "^2.31.0"
minio = "^7.2.0"
beautifulsoup4 = "^4.12.0"
prometheus-client = "^0.20.0"
filelock = "^3.15.4"
tenacity = "^9.0.0"
asyncpg = "^0.29.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
