[tool.poetry]
name = "summarizer"
version = "0.1.0"
description = "AI summarization service for news articles"
authors = ["Codex <codex@openai.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
openai = "^2.6.1"
pydantic = "^2.11.7"
pydantic-settings = "^2.0.0"
python-dotenv = "^1.1.1"
sqlalchemy = "^2.0.0"
psycopg2-binary = "^2.9.0"
asyncpg = "^0.29.0"
fastapi = "^0.104.0"
uvicorn = "^0.24.0"
minio = "^7.2.0"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
